--- a/2_basics_python/homework_python_basics_1.ipynb
+++ b/2_basics_python/homework_python_basics_1.ipynb
@@ -44,21 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите объем файла в байтах 224059719.68\n",
+      "Введите объем файла в байтах: 224059719.68\n",
       "Объем файла равен 213.68 Mb\n"
      ]
     }
    ],
    "source": [
     "# объем файла равен 224059719.68 байт\n",
-    "file_size_bytes = float(input('Введите объем файла в байтах '))\n",
+    "file_size_bytes = float(input('Введите объем файла в байтах: '))\n",
     "file_size_mb = file_size_bytes / (2**20)\n",
     "print('Объем файла равен',file_size_mb,'Mb')"
    ]
@@ -79,69 +79,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите месяц рождения: апрель\n",
-      "Введите день рождения: 10\n",
-      "Знак зодиака: овен\n"
+      "Введите месяц рождения: июнь\n",
+      "Введите день рождения: 1\n",
+      "Знак зодиака: близнецы\n"
      ]
     }
    ],
    "source": [
     "month_of_birth = input('Введите месяц рождения: ')\n",
     "day_of_birth = int(input('Введите день рождения: '))\n",
-    "if month_of_birth == 'март' and day_of_birth >= 21:\n",
+    "if month_of_birth == 'март' and day_of_birth >= 21 or month_of_birth == 'апрель' and day_of_birth <= 20:\n",
     "    print('Знак зодиака: овен')\n",
-    "elif month_of_birth == 'апрель' and day_of_birth <= 20:\n",
-    "    print('Знак зодиака: овен')\n",
-    "elif month_of_birth == 'апрель' and day_of_birth >= 21:\n",
+    "elif month_of_birth == 'апрель' and day_of_birth >= 21 or month_of_birth == 'май' and day_of_birth <= 21:\n",
     "    print('Знак зодиака: телец')\n",
-    "elif month_of_birth == 'май' and day_of_birth <= 21:\n",
-    "    print('Знак зодиака: телец')\n",
-    "elif month_of_birth == 'май' and day_of_birth >= 22:\n",
+    "elif month_of_birth == 'май' and day_of_birth >= 22 or month_of_birth == 'июнь' and day_of_birth <= 21:\n",
     "    print('Знак зодиака: близнецы')\n",
-    "elif month_of_birth == 'июнь' and day_of_birth <= 21:\n",
-    "    print('Знак зодиака: близнецы')\n",
-    "elif month_of_birth == 'июнь' and day_of_birth >= 22:\n",
+    "elif month_of_birth == 'июнь' and day_of_birth >= 22 or month_of_birth == 'июль' and day_of_birth <= 22:\n",
     "    print('Знак зодиака: рак')\n",
-    "elif month_of_birth == 'июль' and day_of_birth <= 22:\n",
-    "    print('Знак зодиака: рак')\n",
-    "elif month_of_birth == 'июнь' and day_of_birth >= 23:\n",
+    "elif month_of_birth == 'июнь' and day_of_birth >= 23 or month_of_birth == 'август' and day_of_birth <= 23:\n",
     "    print('Знак зодиака: лев')\n",
-    "elif month_of_birth == 'август' and day_of_birth <= 23:\n",
-    "    print('Знак зодиака: лев')\n",
-    "elif month_of_birth == 'август' and day_of_birth >= 24:\n",
+    "elif month_of_birth == 'август' and day_of_birth >= 24 or month_of_birth == 'сентябрь' and day_of_birth <= 23:\n",
     "    print('Знак зодиака: дева')\n",
-    "elif month_of_birth == 'сентябрь' and day_of_birth <= 23:\n",
-    "    print('Знак зодиака: дева')\n",
-    "elif month_of_birth == 'сентябрь' and day_of_birth >= 24:\n",
+    "elif month_of_birth == 'сентябрь' and day_of_birth >= 24 or month_of_birth == 'октябрь' and day_of_birth <= 23:\n",
     "    print('Знак зодиака: весы')\n",
-    "elif month_of_birth == 'октябрь' and day_of_birth <= 23:\n",
-    "    print('Знак зодиака: весы')\n",
-    "elif month_of_birth == 'октябрь' and day_of_birth >= 24:\n",
+    "elif month_of_birth == 'октябрь' and day_of_birth >= 24 or month_of_birth == 'ноябрь' and day_of_birth <= 22:\n",
     "    print('Знак зодиака: скорпион')\n",
-    "elif month_of_birth == 'ноябрь' and day_of_birth <= 22:\n",
-    "    print('Знак зодиака: скорпион')\n",
-    "elif month_of_birth == 'ноябрь' and day_of_birth >= 23:\n",
+    "elif month_of_birth == 'ноябрь' and day_of_birth >= 23 or month_of_birth == 'декабрь' and day_of_birth <= 22:\n",
     "    print('Знак зодиака: стрелец')\n",
-    "elif month_of_birth == 'декабрь' and day_of_birth <= 22:\n",
-    "    print('Знак зодиака: стрелец')\n",
-    "elif month_of_birth == 'декабрь' and day_of_birth >= 23:\n",
+    "elif month_of_birth == 'декабрь' and day_of_birth >= 23 or month_of_birth == 'январь' and day_of_birth <= 20:\n",
     "    print('Знак зодиака: козерог')\n",
-    "elif month_of_birth == 'январь' and day_of_birth <= 20:\n",
-    "    print('Знак зодиака: козерог')\n",
-    "elif month_of_birth == 'январь' and day_of_birth >= 21:\n",
+    "elif month_of_birth == 'январь' and day_of_birth >= 21 or month_of_birth == 'февраль' and day_of_birth <= 19:\n",
     "    print('Знак зодиака: водолей')\n",
-    "elif month_of_birth == 'февраль' and day_of_birth <= 19:\n",
-    "    print('Знак зодиака: водолей')\n",
-    "elif month_of_birth == 'февраль' and day_of_birth >= 20:\n",
-    "    print('Знак зодиака: рыбы')\n",
-    "elif month_of_birth == 'март' and day_of_birth >= 20:\n",
+    "elif month_of_birth == 'февраль' and day_of_birth >= 20 or month_of_birth == 'март' and day_of_birth >= 20:\n",
     "    print('Знак зодиака: рыбы')\n",
     "else:\n",
     "    print('ошибка в программе')"
