--- a/3_control_structures_and_collections_part_1/homework_datatypes_cycles_1.ipynb
+++ b/3_control_structures_and_collections_part_1/homework_datatypes_cycles_1.ipynb
@@ -28,9 +28,9 @@
     "word = input('Введите слово латинскими буквами ')\n",
     "x = len(word)\n",
     "if len(word) % 2 == 0:\n",
-    "    print (word[(int(x / 2)-1):(int((x / 2)+1))])\n",
+    "    print(word[(int(x / 2)-1):(int((x / 2)+1))])\n",
     "else:\n",
-    "    print ((word[int(x / 2)]))"
+    "    print((word[int(x / 2)]))"
    ]
   },
   {
@@ -42,14 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Кто-то из мальчиков может остаться без пары, поэтому знакомства не будет\n"
+      "Идеальные пары:\n",
+      "Alex и Emma\n",
+      "Arthur и Kate\n",
+      "John и Kira\n",
+      "Peter и Liza\n",
+      "Richard и Trisha\n"
      ]
     }
    ],
@@ -66,16 +71,16 @@
     "# boys = ['Peter', 'Alex', 'John', 'Arthur', 'Richard', 'Pavel']\n",
     "# girls = ['Kate', 'Liza', 'Kira', 'Emma', 'Trisha']\n",
     "\n",
-    "sorted_boys = sorted(boys)\n",
-    "sorted_girls = sorted(girls)\n",
-    "if len(sorted_boys) > len(sorted_girls):\n",
-    "    print('Кто-то из мальчиков может остаться без пары, поэтому знакомства не будет')\n",
-    "elif len(sorted_boys) < len(sorted_girls):\n",
-    "    print('Кто-то из девочек может остаться без пары, поэтому знакомства не будет')\n",
+    "print('Идеальные пары:')\n",
+    "\n",
+    "if len(boys) > len(girls):\n",
+    "    print('Кто-то из мальчиков может остаться без пары, поэтому знакомства не будет.')\n",
+    "elif len(boys) < len(girls):\n",
+    "    print('Кто-то из девочек может остаться без пары, поэтому знакомства не будет.')\n",
     "else:\n",
-    "    for i,j in zip(sorted_boys, sorted_girls):\n",
+    "    for i,j in zip(sorted(boys), sorted(girls)):\n",
     "        pair = f\"{i} и {j}\"\n",
-    "        print (pair)"
+    "        print(pair)"
    ]
   },
   {
@@ -109,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -131,10 +136,10 @@
      "output_type": "stream",
      "text": [
       "Cредняя температура в Цельсиях\n",
-      "Thailand 23.85714285714285\n",
-      "Germany 13.71428571428571\n",
-      "Russia 3.714285714285717\n",
-      "Poland 11.857142857142856\n"
+      "Thailand 24\n",
+      "Germany 14\n",
+      "Russia 4\n",
+      "Poland 12\n"
      ]
     }
    ],
@@ -144,7 +149,7 @@
     "for average_temperature in countries_temperature:\n",
     "    temperature = (((sum(average_temperature[1]) / len(average_temperature[1])) - 32) * 5/9)\n",
     "    country = average_temperature[0]\n",
-    "    print (f'{country} {temperature}')"
+    "    print(f'{country} {temperature:.0f}')"
    ]
   },
   {
@@ -267,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# квадравтный список 6 на 6\n",
+    "# квадратный список 6 на 6\n",
     "data_2 = [\n",
     "    [13, 25, 23, 34, 45, 74],\n",
-    "    [45, 32, 44, 47, 41. 10],\n",
+    "    [45, 32, 44, 47, 41, 10],\n",
     "    [12, 33, 23, 95, 10, 88],\n",
     "    [13, 53, 34, 35, 12, 19],\n",
     "    [14, 32, 74, 15, 22, 45],\n",
@@ -307,25 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сумма элементов на диагонали: 103.\n"
+      "Сумма элементов на диагонали: 165.\n"
      ]
     }
    ],
    "source": [
     "sum_ = 0\n",
-    "index = 0\n",
-    "for number in data:\n",
-    "# for number in data_2\n",
-    "    a = number[index]\n",
+    "for i, number in enumerate(data):\n",
+    "# for i, number in enumerate(data_2):\n",
+    "    a = number[i]\n",
     "    sum_ += a\n",
-    "    index += 1\n",
     "print(f'Сумма элементов на диагонали: {sum_}.')"
    ]
   }
