corrected the mistake

--- a/5_functions/homework_functions.ipynb
+++ b/5_functions/homework_functions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "passport \"2207 876234\" \"Василий Гупкин\"\n",
+      "invoice \"11-2\" \"Геннадий Покемонов\"\n",
+      "insurance \"10006\" \"Аристарх Павлов\"\n"
+     ]
+    }
+   ],
    "source": [
     "# list – команда, которая выведет список всех документов в формате\n",
     "\n",
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
     "                    del(documents)[documents.index(element_5)]\n",
     "                    break\n",
     "\n",
-    "        for element_6 in directories_2.values():\n",
+    "        for element_6 in direct.values():\n",
     "            for element_7 in element_6:\n",
     "                if element_7 == document_number:\n",
     "                    element_6.remove(element_7)\n",
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -293,10 +303,12 @@
      "output_type": "stream",
      "text": [
       "Доступные команды: people, shelf, list, add shelf, delete, move, add\n",
-      "Введите команду: list\n",
-      "passport \"2207 876234\" \"Василий Гупкин\"\n",
-      "invoice \"11-2\" \"Геннадий Покемонов\"\n",
-      "insurance \"10006\" \"Аристарх Павлов\"\n"
+      "Введите команду: delete\n",
+      "Введите номер документа, который хотите удалить: 10006\n",
+      "Документ \"10006\" удален\n",
+      "\n",
+      "{'1': ['2207 876234'], '2': ['10006'], '3': []}\n",
+      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}]\n"
      ]
     }
    ],
@@ -304,13 +316,6 @@
     "# функция, которая запрашивает и исполняет команды пользователя\n",
     "command_input()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
