--- a/5_functions/homework_functions.ipynb
+++ b/5_functions/homework_functions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,28 @@
     "    '2': ['10006'],\n",
     "    '3': []\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': ['2207 876234'], '2': ['10006'], '3': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = '11-2'\n",
+    "\n",
+    "for el in directories.values():\n",
+    "    if a in el:\n",
+    "        el.remove(a)\n",
+    "print(directories)"
    ]
   },
   {
@@ -59,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,19 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "passport \"2207 876234\" \"Василий Гупкин\"\n",
-      "invoice \"11-2\" \"Геннадий Покемонов\"\n",
-      "insurance \"10006\" \"Аристарх Павлов\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list – команда, которая выведет список всех документов в формате\n",
     "\n",
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +175,7 @@
     "def delete_document(doc, direct):\n",
     "\n",
     "    document_number = input('Введите номер документа, который хотите удалить: ')\n",
-    "\n",
+    "    \n",
     "    documents_list = []\n",
     "    for element_11 in documents:\n",
     "        documents_list.append(element_11['number'])\n",
@@ -176,12 +188,17 @@
     "                if element_5['number'] == document_number:\n",
     "                    del(documents)[documents.index(element_5)]\n",
     "                    break\n",
-    "\n",
-    "        for element_6 in direct.values():\n",
-    "            for element_7 in element_6:\n",
-    "                if element_7 == document_number:\n",
-    "                    element_6.remove(element_7)\n",
-    "            break\n",
+    "          \n",
+    "        for element_6 in directories.values():\n",
+    "                if document_number in element_6:\n",
+    "                    element_6.remove(document_number)\n",
+    "                    break\n",
+    "        \n",
+    "#         for element_6 in direct.values():\n",
+    "#             for element_7 in element_6:\n",
+    "#                 if element_7 == document_number:\n",
+    "#                     element_6.remove(element_7) \n",
+    "#                     break\n",
     "\n",
     "        print(f'Документ \"{document_number}\" удален')\n",
     "        print()\n",
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,21 +269,26 @@
     "         list_shelf_number.append(element_4)\n",
     "\n",
     "    if shelf_number in list_shelf_number:\n",
-    "        print(f'Полка с таким номером уже существует. Список занятых полок: {list_shelf_number}')\n",
-    "    else:\n",
     "        documents.append({'type': document_type, 'number': document_number, 'name': document_holder})\n",
-    "        directories[shelf_number] = [document_number]\n",
-    "\n",
+    "        for key, values in directories.items():\n",
+    "            if key == shelf_number:\n",
+    "                values.append(document_number)        \n",
+    "        \n",
     "        print()\n",
     "        print('Новый документ добавлен в каталог и на полку')\n",
     "        print()\n",
     "        print(documents)\n",
-    "        print(directories)"
+    "        print(directories)\n",
+    "    \n",
+    "    else:\n",
+    "        print(f'Полки с таким номером уже существует. Номера имеющихся полок: {list_shelf_number}')\n",
+    "\n",
+    "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +329,8 @@
       "Введите номер документа, который хотите удалить: 10006\n",
       "Документ \"10006\" удален\n",
       "\n",
-      "{'1': ['2207 876234'], '2': ['10006'], '3': []}\n",
-      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}]\n"
+      "{'1': ['2207 876234', '11-2'], '2': [], '3': []}\n",
+      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}]\n"
      ]
     }
    ],
