--- a/8_class_concept/8_homework_python_class.ipynb
+++ b/8_class_concept/8_homework_python_class.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "        self.r = requests.get('https://www.cbr-xml-daily.ru/daily_json.js')\n",
     "        return self.r.json()['Valute']\n",
     "    \n",
-    "    def make_format(self, currency, deff):\n",
+    "    def make_format(self, currency):\n",
     "        \"\"\"\n",
     "        Возвращает информацию о валюте currency в двух вариантах:\n",
     "        - полная информация о валюте при self.format = 'full':\n",
@@ -103,48 +103,48 @@
     "    def eur(self, deff):\n",
     "        \"\"\"Возвращает курс евро на сегодня в формате self.format\"\"\"\n",
     "        if self.deff == False:\n",
-    "            return self.make_format('EUR', False)\n",
+    "            return self.make_format('EUR')\n",
     "        if self.deff == True:\n",
-    "            return self.make_format('EUR', True)\n",
+    "            return self.make_format('EUR')\n",
     "            \n",
-    "    def usd(self):\n",
+    "    def usd(self, deff):\n",
     "        \"\"\"Возвращает курс доллара на сегодня в формате self.format\"\"\"\n",
     "        if self.deff == False:\n",
-    "            return self.make_format('USD', False)\n",
+    "            return self.make_format('USD')\n",
     "        if self.deff == True:\n",
-    "            return self.make_format('USD', True)\n",
+    "            return self.make_format('USD')\n",
     "    \n",
-    "    def brl(self):\n",
+    "    def brl(self, deff):\n",
     "        \"\"\"Возвращает курс бразильского реала на сегодня в формате self.format\"\"\"\n",
     "        if self.deff == False:\n",
-    "            return self.make_format('BRL', False)\n",
+    "            return self.make_format('BRL')\n",
     "        if self.deff == True:\n",
-    "            return self.make_format('BRL', True)\n",
+    "            return self.make_format('BRL')\n",
     "    \n",
     "# Задание №1    \n",
     "    def max_currency(self):\n",
     "        \"\"\"Возвращает название валюты с максимальным значением курса\"\"\"\n",
     "        \n",
-    "        self.r = requests.get('https://www.cbr-xml-daily.ru/daily_json.js')\n",
-    "        \n",
     "        dic_currency = {}\n",
     "        \n",
     "        for valute in self.exchange_rates().values():\n",
-    "            dic_currency[valute['Name']] = valute['Value']\n",
+    "            dic_currency[valute['Name']] = valute['Value'] / valute['Nominal']\n",
     "        \n",
-    "        return print(max(dic_currency), max(dic_currency.values()))"
+    "        for key, value in dic_currency.items():\n",
+    "            if value == max(dic_currency.values()):\n",
+    "                return print(key, value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Японских иен 97.7624\n"
+      "СДР (специальные права заимствования) 95.8589\n"
      ]
     }
    ],
@@ -156,21 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Изменение по сравнению в прошлым значением:  0.5995999999999952\n"
+      "Изменение по сравнению в прошлым значением:  -0.10679999999999978\n"
      ]
     }
    ],
    "source": [
     "# Задание №2\n",
     "r = Rate(format_='value', deff=True)\n",
-    "r.eur(deff=True)"
+    "r.brl(deff=True)"
    ]
   },
   {
