--- a/4_control_structures_and_collections_part_2/homework_datatypes_cycles_2.ipynb
+++ b/4_control_structures_and_collections_part_2/homework_datatypes_cycles_2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,26 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[213, 15, 54, 119, 98, 35]\n"
+      "[98, 35, 15, 213, 54, 119]\n"
      ]
     }
    ],
    "source": [
-    "ids_2 = []\n",
+    "ids_2 = set()\n",
     "\n",
     "a = list(ids.values())\n",
     "for el in a:\n",
     "    for b in el:\n",
-    "        if b not in ids_2:\n",
-    "            ids_2.append(b)\n",
-    "print(ids_2)"
+    "        ids_2.add(b)\n",
+    "\n",
+    "c = list(ids_2)    \n",
+    "print(c)"
    ]
   },
   {
