--- a/6_work_with_the_file_system_and_modules/6_homework_read-write_and_pip.ipynb
+++ b/6_work_with_the_file_system_and_modules/6_homework_read-write_and_pip.ipynb
@@ -23,24 +23,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1.Переведите содержимое файла purchase_log.txt в словарь purchases.\n",
-    "\n",
-    "h = open('purchase_log.txt', 'r', encoding = 'UTF-8')\n",
-    "purchase_log = h.readlines()\n",
-    "h.close()\n",
-    "purchase_log[0:10]\n",
-    "    \n",
-    "import json\n",
-    "purchases = {}\n",
-    "\n",
-    "for el in purchase_log:\n",
-    "    a = json.loads(el)\n",
-    "    purchases[a['user_id']] = a['category']"
+    " import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1.Переведите содержимое файла purchase_log.txt в словарь purchases.\n",
+    "\n",
+    "with open('purchase_log.txt', 'r', encoding = 'UTF-8') as f:\n",
+    "    f.readline()\n",
+    "    \n",
+    "    purchases = {}\n",
+    "    for line in f:\n",
+    "        a = json.loads(line)\n",
+    "        purchases[a['user_id']] = a['category']\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
